--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "core-js": "^3.6.5",
     "mongodb": "^3.6.0",
     "register-service-worker": "^1.7.1",
